test/Fail/Issue2291-hidden.err
Issue2291-hidden.agda:3.12-15: error: [NoParseForLHS]
Could not parse the left-hand side {_}
Operators used in the grammar:
  None
when scope checking let {_} = _ in _
